Updated the css file as well as the js file to make sure that the flappy bird game is scaleable on different sized devices and the game has padding around it so that the text and game are well spaced from the borders and each other

--- a/flappyBird.css
+++ b/flappyBird.css
@@ -6,7 +6,7 @@
   
   }
   
-  html, body {
+  html {
   
     height:100%;
     width:100%;
@@ -14,7 +14,10 @@
   }
   
   body {
-  
+    width: 88%;
+    height:86%;
+    margin: 5%;
+    margin-top: 1%;
     align-content:space-around;
     text-align: center;
     background-color:#545f5f;
@@ -22,4 +25,8 @@
     display:grid;
     justify-content:center;
   
+  }
+
+  canvas{
+    padding: 1%;
   }
